SQuirreL SQL Client Change Log
==============================

Not yet released, available in our GIT repository and in snapshots and future releases.
===============================================================================================

Enhancements:

When the Object tree is searched the Session's status displays a progress bar with a stop button.

New Plugin "High resolution icon"
  Provides high resolution icons for  HiDPI screens.
  Thanks to Stanimir Stamenkov for merge request #80 on which this Plugin is based.

Merge Request #81: Show selected Alias's JDBC URL in the main window's status bar
  Thanks to Stanimir Stamenkov for the merge request.

SQL Result: The "Mark duplicates ..." function has two new  modes:
   - Duplicate cells in row
   - Duplicate consecutive cells in row
  Improved switching between lighter and darker duplicate color.

Merge Request #78 Derby Plugin: When the Derby Plugin is installed it sets the JVM property derby.system.home
  to the Plugin's user directory which is <SQUIRREL_USER_DIR>/plugins/derby/.
  Users may change this default by setting the property in SQuirrel's start script.
  Thanks to Stanimir Stamenkov for the merge request.

Merge Request #77 Improved layout and Look & Feel compatibility for several components
  including but not limited to: Status bar, top panel of SQL results, about dialog.
  Thanks to Stanimir Stamenkov for the merge request.

Merge Request #76 Derby Plugin: Improved Derby shutdown handling for embedded DBs
  Thanks to Stanimir Stamenkov for the merge request.

New Session properties and database specific Query tokenizers now have an option
  to keep SQuirreL from removing line comments "--..." before sending SQLs to database.
  See menu File --> New Session Properties --> tab SQL -->
  checkbox "Remove line comment (--...) from SQL before sending to database"

"Show distinct values..." dialog: When the distinct values of just one column is displayed