@@ -18,7 +18,7 @@ dataTypeBigDecimal.scaleEceeded=Scale Exceeded: Number of digits to right of dec
 dataTypeBlob.blobType=BLOB   (SQL type 2004):
 dataTypeBlob.read=Read
 dataTypeBlob.readOnFirstLoad=Read contents when table is first loaded:
-dataTypeClob.typeClob=CLOB   (SQL type 2005)
+dataTypeClob.typeClob_NClob=CLOB   (SQL type 2005) / NCLOB   (SQL type 2011)
 dataTypeDate.allowInexact=allow inexact format on input
 dataTypeDate.full=Full ({0})
 dataTypeDate.long=Long ({0})
